    behaviour for cutoff values < -1 (PR # 3749)
  * Fixes distances.between not always returning AtomGroup (Issue #3794)
  * Upgrade to chemfiles 0.10.3 (Issue #3798)
  * fixes guessed_attributes and read_attributes methods of the Topology class, as 
    those methods were giving unexpected results for some topology attributes
    (e.g. bonds, angles) (PR #3779).

Enhancements
  * Added dipole and quadrupole moment topology methods to AtomGroup
    (Issue #3841, PR #3842)
  * MDAnalysis now follows PEP621 (PR #3528)
  * Added a reader for GROMACS TNG files based on PyTNG (PR #3765,
    Issue #3237, partially addressing Issue #865) 
  * Added ability for hbond analysis to use types when resnames are not 
    present (Issue #3847)
  * Added explanatory warnings when hbond analysis doesn't find any hbonds
    (Issue #3847)
  * Improve C content of libxdr Cython, add `read_direct` methods to read 
    coordinates, velocities and forces directly into memoryviews of `Timestep`
    attributes, make `TRR` timestep have positions, velocities and forces on
    `__init__`. (Issue #3891 PR  #3892).
  * Improve C content of libdcd Cython (Issue #3882, PR #3888)
  * The timeseries method for exporting coordinates from multiple frames to a
    NumPy array was added to ProtoReader (PR #3890)
  * MDAnalysis now officially supports py3.11 (Issue #3878)
  * LAMMPSDump Reader optionally unwraps trajectories with image flags upon 
    loading (Issue #3843)
  * LAMMPSDump Reader now imports velocities and forces (Issue #3843)
  * Minimum NumPy version for py3.11 is now set to 1.23.2.
  * Added decorator to check for an empty atom group, applied in topological 
    attributes(Issue #3837)
  * AuxReaders now have a memory_limit parameter to control when memory usage
    warnings are issued. (PR # 3749)
  * MDAnalysis.units now has a lookup dictionary called MDANALYSIS_BASE_UNITS
    where unit types like length or speed are mapped to their base units in