@@ -32,19 +32,19 @@ Mixed Cython utils for ENCORE
 
 
 import numpy as np
-cimport numpy as np
+cimport numpy as cnp
 import cython
 from libc.math cimport sqrt
 
-np.import_array()
+cnp.import_array()
 
 
 @cython.boundscheck(False)
 @cython.wraparound(False)
-def PureRMSD(np.ndarray[np.float64_t, ndim=2] coordsi,
-             np.ndarray[np.float64_t, ndim=2] coordsj,
+def PureRMSD(cnp.ndarray[cnp.float64_t, ndim=2] coordsi,
+             cnp.ndarray[cnp.float64_t, ndim=2] coordsj,
              int atomsn,
-             np.ndarray[np.float64_t, ndim=1] masses,
+             cnp.ndarray[cnp.float64_t, ndim=1] masses,
              double summasses):
 
     cdef  int k
