@@ -21,12 +21,12 @@
 # J. Comput. Chem. 32 (2011), 2319--2327, doi:10.1002/jcc.21787
 #
 import numpy as np
-cimport numpy as np
+cimport numpy as cnp
 
 from libc.stdlib cimport free
 from cpython cimport PyObject, Py_INCREF
 
-np.import_array()
+cnp.import_array()
 
 
 cdef class ArrayWrapper:
@@ -74,8 +74,8 @@ cdef class ArrayWrapper:
     def __array__(self):
         """ Here we use the __array__ method, that is called when numpy
             tries to get an array from the object."""
-        ndarray = np.PyArray_SimpleNewFromData(self.ndim,
-                                               <np.npy_intp*> self.dim,
+        ndarray = cnp.PyArray_SimpleNewFromData(self.ndim,
+                                               <cnp.npy_intp*> self.dim,
                                                self.data_type,
                                                self.data_ptr)
         return ndarray
@@ -87,7 +87,7 @@ cdef class ArrayWrapper:
         # free(<int*>self.dim)
 
 
-cdef np.ndarray ptr_to_ndarray(void* data_ptr, np.int64_t[:] dim, int data_type):
+cdef cnp.ndarray ptr_to_ndarray(void* data_ptr, cnp.int64_t[:] dim, int data_type):
     """convert a pointer to an arbitrary C-pointer to a ndarray. The ndarray is
     constructed so that the array it's holding will be freed when the array is
     destroyed.
@@ -110,7 +110,7 @@ cdef np.ndarray ptr_to_ndarray(void* data_ptr, np.int64_t[:] dim, int data_type)
     array_wrapper = ArrayWrapper()
     array_wrapper.set_data(<void*> data_ptr, <int*> &dim[0], dim.size, data_type)
 
-    cdef np.ndarray ndarray = np.array(array_wrapper, copy=False)
+    cdef cnp.ndarray ndarray = np.array(array_wrapper, copy=False)
     # Assign our object to the 'base' of the ndarray object
     ndarray[:] = array_wrapper.__array__()
     # Increment the reference count, as the above assignement was done in
