@@ -305,6 +305,7 @@ Fixes
   * fixes guessed_attributes and read_attributes methods of the Topology class, as 
     those methods were giving unexpected results for some topology attributes
     (e.g. bonds, angles) (PR #3779).
+  * Updated cimport for numpy to maintain cimport consistency (Issue #3908).
 
 Enhancements
   * Added dipole and quadrupole moment topology methods to AtomGroup
